--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
       <artifactId>guava</artifactId>
       <version>30.1.1-jre</version>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>3.10.0</version>
+    </dependency>
   </dependencies>
 
   <build>
